<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        android:background="@drawable/device_list"
        app:layout_constraintBottom_toTopOf="@+id/amount_of_repetitions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_collection_fragment" />


    <TextView
        android:id="@+id/amount_of_repetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/amount_of_repetitions"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColor="@color/button_text_color_active"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/start_car_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/start_draw_button"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <TextView
        android:id="@+id/device_collection_fragment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/start_car_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar">

        <RadioButton
            android:id="@+id/speed_low"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/default_radio_button"
            android:checked="true"
            android:text="@string/speed_slow"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/button_text_color_active" />

        <RadioButton
            android:id="@+id/speed_med"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/default_radio_button"
            android:text="@string/speed_med"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/button_text_color_active" />

        <RadioButton
            android:id="@+id/speed_fast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/default_radio_button"
            android:text="@string/speed_fast"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/button_text_color_active" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:progressTint="@color/progess_color"
        android:thumbTint="@color/thumb_color"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_of_repetitions" />


</android.support.constraint.ConstraintLayout>